# ai_onboarding_bot

./: .dockerignore  .env.example  .env.prod.example  .gitignore  DEPLOYMENT.md  DOCKER.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  docker-manage.sh  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/ai/: __init__.py  document_processor.py  llm.py  rag.py  vector_store.py
app/ai/embeddings/: __init__.py  document_processor.py
app/ai/langchain/: __init__.py  llm_manager.py  vector_store.py  workflows.py
app/ai/rag/: __init__.py  hybrid_rag_service.py  vector_cache_service.py
app/api/: __init__.py  main.py
app/api/routes/: __init__.py  documents.py  health.py  onboarding.py  rag.py  users.py
app/bot/: __init__.py  bot.py  handlers.py
app/bot/middleware/: __init__.py  rag_middleware.py
app/core/: __init__.py  cache.py  config.py  exceptions.py  logging.py  security.py
app/database/: connection.py  crud.py  init_db.py  models.py
app/services/: __init__.py  onboarding_service.py  user_service.py
docker/nginx/: nginx.conf
docker/nginx/conf.d/: default.conf
docker/postgres/init/: 01-init.sql
docker/qdrant/config/: config.yaml
docker/redis/: redis.conf
docs/: api_integrations.md  architecture_overview.md  caching_performance_optimization.md  database_schema.md  deployment_documentation.md  docker_configuration.md  document_processing_system.md  hybrid_rag_integration.md  logging_monitoring_system.md  multilingual_support.md  project_structure.md  roles_access_system.md  scaling_performance_recommendations.md  testing_cicd_strategy.md
docs/ai/: langchain_dependencies.md  langchain_examples.md  langchain_rag_architecture.md
migrations/: env.py
requirements/: base.txt  dev.txt  prod.txt  test.txt
tests/: __init__.py  conftest.py  test_rag_integration.py
tests/test_api/: test_health.py
tests/test_core/: test_config.py
tests/test_services/: test_user_service.py
